# volmy-desktop

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.hpp  resources.qrc
src/qml/: main.qml
src/qml/components/: TouchList.qml  TouchListDelegate.qml
src/qml/views/: auth.qml
